--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+@font-face {
+    font-family: 'WorkSans';
+    src: url('./assets/fonts/WorkSans-VariableFont_wght.ttf') format('truetype');
+  }
+  
+  body {
+    font-family: 'WorkSans', sans-serif;
+  }
+  
